# androidNative

./: README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/didi/androidnative/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Demo.cpp  Demo.h  main.cpp  native-lib.cpp
app/src/main/cpp/base/: AndroidLog.cpp  AndroidLog.h  jvm.cpp  jvm.h
app/src/main/cpp/jni/: jni_bitmap.cpp  jni_dynamic_load.cpp  jni_exception.cpp  jni_thread.cpp  jni_type_demo.cpp  jni_type_demo.h
app/src/main/cpp/people/: people.cpp  people.h
app/src/main/java/com/didi/androidnative/: Animal.kt  Constants.java  DynamicLib.kt  JniLoad.java  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/didi/androidnative/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
